Change Calibre library volume path in docker-compose
Updated the volume path for the Calibre library.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
       - "8090:8080" # Accès via http://IP-DU-PC:8090
     volumes:
       # REMPLACE CE CHEMIN par le chemin réel de ta bibliothèque Calibre sur ton host
-      - C:/Users/hugo.lorien.ext/OneDrive - Nexpublica/Documents/books:/books:ro 
+      - C:/books:/books:ro 
     restart: unless-stopped
